RED-1078 single test run fixed